debugged initial code

--- a/html/RingControl.html
+++ b/html/RingControl.html
@@ -16,10 +16,10 @@
   Tell your LED ring what to do!<br>
     <ul>
         <li>
-            <input type="radio" id="onOff" name="onOff" value="n" onChange="handleSelect();">Turn the LED on.
+            <input type="radio" id="onOff" name="onOff" value="n" onChange="handleSelect();">Turn the LEDs on.
         </li>
         <li>
-            <input type="radio" id="onOff" name="onOff" value="f" onChange="handleSelect();">Turn the LED off.
+            <input type="radio" id="onOff" name="onOff" value="f" onChange="handleSelect(); checked">Turn the LEDs off.
         </li>
         <li>
             <label for="mode">Mode</label>
@@ -38,9 +38,16 @@
                 <option value="allFlash">All Flash</option>
                 <option value="quadFlasher">Quad Flasher</option>
                 <option value="quadFlasher2">Quad Flasher 2</option>
-                <option value="octoFlasher">Octo Flasher</option>
+                <option value="quadFlasher3">Quad Flasher 3</option>
+                <option value="quadFlasher4">Quad Flasher 4</option>
+                <option value="quadFlasher5">Quad Flasher 5</option>
+                <option value="quadFlasher6">Quad Flasher 6</option>
+                <option value="quadFlasher7">Quad Flasher 7</option>
+                <option value="octaFlasher">Octo Flasher</option>
+                <option value="octaFlasher2">Octo Flasher 2</option>
                 <option value="circulator">Circulator</option>
-                <option value="singleColorBreath">Single Color Breath</option>
+                <option value="pendulum">Pendulum</option>
+                <option value="breathe">Breathe</option>
                 <option value="flashSynched">Flash Synched</option>
                 <option value="flashPhased">Flash Phased</option>
                 <option value="winkSynched">Wink Synched</option>
